--- a/product-validation-service/src/main/resources/application.yml
+++ b/product-validation-service/src/main/resources/application.yml
@@ -11,9 +11,10 @@ spring:
     consumer:
       group-id: product-validation-group
       auto-offset-reset: latest
+
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:postgres}
+    url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:product-db}
     username: ${DB_USER:postgres}
     password: ${DB_PASSWORD:postgres}
 
